// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wireguard generate server to server access > Should generate configs 1`] = `
{
  "Address": "10.0.0.1/24",
  "ListenPort": 51820,
  "Peers": [
    {
      "AllowedIPs": Set {
        "10.0.0.2/32",
      },
      "Endpoint": "server2.wireguard.com:51821:51821",
      "PresharedKey": StringMatching /\\^\\[\\\\d\\+/A-Za-z\\]\\{42\\}\\[048AEIMQUYcgkosw\\]=\\$/,
      "PublicKey": StringMatching /\\^\\[\\\\d\\+/A-Za-z\\]\\{42\\}\\[048AEIMQUYcgkosw\\]=\\$/,
    },
  ],
  "PrivateKey": StringMatching /\\^\\[\\\\d\\+/A-Za-z\\]\\{42\\}\\[048AEIMQUYcgkosw\\]=\\$/,
}
`;

exports[`wireguard generate server to server access > Should generate configs 2`] = `
{
  "Address": "10.0.0.2/24",
  "ListenPort": 51821,
  "Peers": [
    {
      "AllowedIPs": Set {
        "10.0.0.1/32",
      },
      "Endpoint": "server1.wireguard.com:51820:51820",
      "PresharedKey": StringMatching /\\^\\[\\\\d\\+/A-Za-z\\]\\{42\\}\\[048AEIMQUYcgkosw\\]=\\$/,
      "PublicKey": StringMatching /\\^\\[\\\\d\\+/A-Za-z\\]\\{42\\}\\[048AEIMQUYcgkosw\\]=\\$/,
    },
  ],
  "PrivateKey": StringMatching /\\^\\[\\\\d\\+/A-Za-z\\]\\{42\\}\\[048AEIMQUYcgkosw\\]=\\$/,
}
`;
